# pyoes

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  check_versions.sh  development.ini  nose_cover.cfg  package.json  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: pr-labeler.yml
.github/workflows/: pr-labeler.yml  pre-release-package-manual.yml  pyoes.yml  release-package.yml
docs/: Makefile  api.rst  changes.rst  conf.py  development.rst  gebruik.rst  glossary.rst  index.rst  install.rst  make.bat
npm-packages/pyoes/: .gitignore  package.json
npm-packages/pyoes/scss/: base-variables.scss  pyoes-apps.scss  (+2 more)
pyoes/: __init__.py  static_views.py  utils.py  views.py
pyoes/scaffolds/: __init__.py
pyoes/scripts/: convert_pinpoints.sh  install_compass_extensions.py
pyoes/static/: bower.json  config.rb  package.json
pyoes/templates/: 401.jinja2  403.jinja2  404.jinja2  500.jinja2  actorenfront.jinja2  actorenzoek.jinja2  article.jinja2  article9-3.jinja2  atramhasis_menu.jinja2  beeldbank-detail.jinja2  beeldbank.jinja2  beheersplannen.jinja2  besluitendatabank.jinja2  blokken.jinja2  burgerprofiel.jinja2  burgerprofiel2.jinja2  colors.jinja2  elements.jinja2  grids.jinja2  header-footer.jinja2  headerlinks.jinja2  home.jinja2  icons.jinja2  images.jinja2  index.jinja2  layout.jinja2  navigation.jinja2  over_deze_site.jinja2  pinpoints.jinja2  typo.jinja2  vinden.jinja2
tests/: test_static_views.py  test_utils.py  test_varia.py
(+213 files in other folders)
